[package]
name = "protocol_v3_macro"
version = "0.1.0"
edition = "2021"
license = "None"
description = "Derive macro for Protocol V3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = {version = "2.0.29", features=["full", "extra-traits"]}
quote = "*"
proc-macro2 = "*"