[package]
name = "protocol_v3_macro"
version = "0.1.1"
edition = "2021"
license = "Unlicense"
description = "Derive macro for Protocol V3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = {version = "2.0.29", features=["full", "extra-traits"]}
quote = "1.0.33"
proc-macro2 = "1.0.66"